# turtl

./: AUDIT_SUMMARY.md  CLAUDE.md  Cargo.toml  ML_KEM_BUG_REPORT.md  MULTICLAUDE_TASKS.md  PROJECT_DESIGN.md  README.md  SECURITY_REVIEW_2026-07.md  TASK_BREAKDOWN.md  TODO.md
.github/workflows/: auto-merge.yml  ci.yml
.multiclaude/agents/: ci-fixer.md  pm.md
agents/: worker.md
benches/: dsa_benchmark.rs  kem_benchmark.rs  ntt_benchmark.rs
docs/: IMPLEMENTATION.md  SECURITY.md  SECURITY_IMPROVEMENTS.md
examples/: README.md  dsa_basic.rs  hedged_signing.rs  interop_check.rs  kem_basic.rs  keygen_kat.rs  ntt_check.rs  real_roundtrip.rs
src/: error.rs  lib.rs
src/common/: coding.rs  hash.rs  mod.rs  ntt.rs  poly.rs  ring.rs  sample.rs
src/dsa/: keypair.rs  mod.rs  params.rs  sign.rs  stamp.rs  verify.rs
src/dsa/internal/: aux.rs  mod.rs
src/kem/: decapsulate.rs  encapsulate.rs  kem.md  keypair.rs  mod.rs  params.rs  shell.rs
src/kem/internal/: aux.rs  k_pke.rs  mod.rs
src/security/: constant_time.rs  fault_detection.rs  mod.rs
tests/: constant_time_test.rs  det_kat.rs  dsa_full_validation_test.rs  dsa_perf_baseline.rs  dsa_test_vectors.rs  error_handling_test.rs  fault_injection_test.rs  fips_interop.rs  kem_test_vectors.rs  keygen_kat.rs  negative_test_cases.rs  ntt_correctness_test.rs  ntt_cs1_test.rs  ntt_roundtrip_test.rs  pulse_perf_baseline.rs  pulse_validation_test.rs  security_test.rs  simple_sign_test.rs  test_real_mldsa44.rs  timing_invariance_test.rs  verify_debug_test.rs  zeroization_test.rs
