[package]
name = "turtl"
version = "0.1.0"
edition = "2021"
authors = ["Charl charley.hoffm@gmail.com"]
description = "Trusted Uniform Rust Toolkit for Lattice-cryptography - Post-Quantum Cryptography Implementation"
repository = "https://github.com/larchey/turtl"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["cryptography", "post-quantum", "lattice", "kem", "signature"]
categories = ["cryptography", "no-std"]

[dependencies]
rand = { version = "0.8", default-features = false }
rand_chacha = { version = "0.3", default-features = false }
sha3 = { version = "0.10", default-features = false }
zeroize = { version = "1.5", features = ["zeroize_derive"] }
thiserror = "1.0"

[dev-dependencies]
criterion = "0.4"
hex = "0.4"

[features]
default = ["std"]
std = ["rand/std", "rand_chacha/std", "sha3/std"]
nightly = ["std"]  # For SIMD optimizations

[[bench]]
name = "ntt_benchmark"
harness = false

[[bench]]
name = "kem_benchmark"
harness = false

[[bench]]
name = "dsa_benchmark"
harness = false